--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
-    "homepage": "http://Thymoos.github.io/calculator-challenge"
+    "homepage": "http://thymoos.github.io/calculator-challenge"
   },
   "scripts": {
     "start": "react-scripts start",
