--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://thymoos.github.io/calculator-challenge",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
@@ -9,8 +10,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
-    "web-vitals": "^1.1.2",
-    "homepage": "http://thymoos.github.io/calculator-challenge"
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
