--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://thymoos.github.io/calculator-challenge",
+  "homepage": "https://thymoos.github.io/calculator-challenge",
   "name": "calculator",
   "version": "0.1.0",
   "private": true,
